--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.0",
     "react-icons": "^5.2.1",
+    "react-resizable-panels": "^2.0.20",
     "sonner": "^1.5.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
