--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -59,6 +60,7 @@
     "draft-js": "^0.11.7",
     "fuse.js": "^7.0.0",
     "geist": "^1.3.0",
+    "google-auth-library": "^9.13.0",
     "lucide-react": "^0.400.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
@@ -79,6 +81,7 @@
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/draft-js": "^0.11.18",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.20",
