--- a/package.json
+++ b/package.json
@@ -78,9 +78,11 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tippy.js": "^6.3.7",
-    "zod": "^3.23.3"
+    "zod": "^3.23.3",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/draft-js": "^0.11.18",
     "@types/eslint": "^8.56.2",
