--- a/package.json
+++ b/package.json
@@ -52,12 +52,14 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "draft-js": "^0.11.7",
+    "file-extension-icon-js": "^1.1.6",
     "fuse.js": "^7.0.0",
     "geist": "^1.3.0",
     "google-auth-library": "^9.13.0",
@@ -78,6 +80,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tippy.js": "^6.3.7",
+    "vaul": "^1.0.0",
     "zod": "^3.23.3",
     "zustand": "5.0.0-rc.2"
   },
